# DESHIMAmodel

./: .gitignore  .zenodo.json  LICENSE  README.md  interface.py  main.py  parameters.txt  pyproject.toml  setup.py  signal_transmitter.py
.github/workflows/: gh-pages.yml  publish.yml
Animation/: SubplotAnimationSlider.py  SubplotAnimationTime.py
Atmosphere/: AtmosphereAnimation.py  EsmeesFirstTryOutFile.amc  Overlapping_curves.py  use_am.py  use_aris.py
Atmosphere_model_Kah_Wuy/: aris.py
DESHIMA/: Lorentzian.pyx  use_desim.py  use_desim_old.py
DESHIMA/MKID/: filterbank.py  photon_noise.py
DESHIMA/desim/: desim.py  minidesim.py
Data/: tryout.txt
Data/F/: F.txt
Data/Pkid/: Pkid_for_pwv_0.1.txt  Pkid_for_pwv_0.11382823452540321.txt  Pkid_for_pwv_0.11382823452540321_D1.txt  Pkid_for_pwv_0.12486150675272545.txt  Pkid_for_pwv_0.12956866975170195.txt  Pkid_for_pwv_0.12956866975170195_D1.txt  Pkid_for_pwv_0.14748572927641243.txt  Pkid_for_pwv_0.14748572927641243_D1.txt  Pkid_for_pwv_0.15590395868560902.txt  Pkid_for_pwv_0.16788040181225602.txt  Pkid_for_pwv_0.16788040181225602_D1.txt  Pkid_for_pwv_0.19109529749704404.txt  Pkid_for_pwv_0.19109529749704404_D1.txt  (+55 more)
GalaxySpectrum/: COcoeff  GiveSL.py  K17_Table4  K17_Table6  K17_Table7  MP.py  coeff  coeffBonato  coeff_spinoglio  pgplot.csv  spectrumCreate.py
Source/: bb_source.py
Telescope/: telescope_transmission.py
__MACOSX/: __GalaxySpectrum
docs/: conf.py  index.rst
etc/: builddocs
tests/: test_tiempo_deshima.py
tiempo_deshima/: __init__.py  configure  interface.py  signal_transmitter.py
(+2917 files in other folders)
