[tool.poetry]
name = "tiempo_deshima"
version = "0.1.9"
description = "time-dependent end-to-end model for post-process optimization"
authors = ["Esmee Huijten"]
maintainers = ["Stefanie-B <s.a.brackenhoff@student.tudelft.nl>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/deshima-dev/tiempo_deshima"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.2"
joblib = "^0.16.0"
galspec = "^0.2.3"
matplotlib = "^3.3.2"
scipy = "^1.5.2"
pandas = "^1.1.2"
astropy = "^4.0.1"
pathlib = "^1.0.1"
pydata_sphinx_theme = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
sphinx = "^3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
